# SAMI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SAMI.sln
SAMI/: CMakeLists.txt  SAMI.vcxproj  SAMI.vcxproj.filters
SAMI/src/: SAMI.h
SAMI/src/SAMI/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  SAMI.h
SandBox/: CMakeLists.txt  SandBox.vcxproj
SandBox/src/: SandBoxApplication.cpp
